--- a/客户.md
+++ b/客户.md
@@ -24,7 +24,7 @@
 
 工业产品的销售对象都是年龄较大，在社会上有一定地位，有很多阅历，有很大智慧的人，没有智慧的人也不会是我们的客户。和这样的客户打交道本身就是提高我们自己能力和阅历，知识的行为。 所以一个好销售，他本身的素质要高！这样才能与狼共舞。
 
-对客户越了解，成功率就越高
+# 对客户越了解，成功率就越高
 
 但是人，都怕磨。 一次生，2此熟，3次就是朋友了。
 
