--- a/说话沟通拜访.md
+++ b/说话沟通拜访.md
@@ -38,7 +38,8 @@
 很多饭店的常客都是商务宴请,个人消费少呢
 约他出来吃饭（他出来不出来不重要，重要的是你传达你的信息出去了）。
 
-怎样让客户相信你...？？？？？ 谢谢你 色哥(钢铁 铝业 铜业 重工业是我们的客户） 
+# 怎样让客户相信你...
+谢谢你 色哥(钢铁 铝业 铜业 重工业是我们的客户） 
 回： 信任来自专业。。 所以： 
 1，你要给客户展示你的公司是专业干这个的！别给他什么都做的概念。 
 2.你要给客户完全展示，你的产品是完全能满足他们工业生产需要的！ 
@@ -112,8 +113,5 @@
 
 
 
-心里紧张
-我们在刚刚出道的时候和你现在面临的情况是一样的，可以说销售员基本上都是这样过来的。 我的小说里为什么训练业务员首先要“苦练内功”？ 因为知识是自信之本。 有知识那怕再贫穷，内心也是富足的，别人也不会小看你＃知识就是力量。 所以，一切皆是虚幻，你的第一件事情把你销售的产品的产品知识搞懂，搞成半个专家。 有了专业的知识做铺垫，做基础，你一切问题都会迎刃而解的。 比如你见人紧张，假如你有足够的知识的话，你可以把你要拜访的客户看做是一群傻也不懂的孩子，急需你去教育他们产品知识。你这样在进门时心里暗示自己。 这样暗示几次，你再也不怕，不紧张了。 我当初刚刚入这行，见客户也心里紧张。 我自己对自己说：客户就是一群狗，你不打它，它就咬你。 所以这样心里暗示，从心里蔑视客户，这样自然就不紧张了。
 
-回： “人多时候打电话不敢大声，见客户畏畏缩缩，谈判时候唯唯诺诺” 你说的这个问题，我春节前专门组织了销售员培训有人提出这个问题，我们开会专门研究了最后得出的结论是： 之所以出现这些现在，表面上看是没自信，其实真正的原因是： 掌握的行业，产品知识不够，没有这些知识点做支撑，所以才会表现的不够自信，担心这担心那，担心拒绝，担心没面子等等。
 
